added some css styling to improve the desktop look

--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -2,6 +2,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
 }
 
 .buttons {
