--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -1,26 +1,65 @@
+:root {
+  --dark: #2f313a;
+  --yellow: #ffdd40;
+  --red: #dd2424;
+}
+
 .product_list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
   justify-content: center;
+}
+
+.product_item {
+  width: 300px;
+  min-height: 400px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+} 
+
+.blur {
+  filter: blur(5px);
+  pointer-events: none;
 }
 
 .buttons {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  background-color: var(--dark);
+  border-radius: 12px;
+  border: 3px solid var(--yellow);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.buttons button {
+  font-size: 14px;
+  padding: 5px 10px;
+  border: 3px solid white;
 }
 
 .deleteBtn {
-  background-color: #dd2424;
+  background-color: var(--red);
   color: white;
+  border: 3px solid white;
 }
 
 .deleteBtn:hover,
 .deleteBtn:active {
   background-color: #dd2424;
-  border: 3px solid #ffffff;
   font-weight: bold;
-} 
+  border: 3px solid white;
+}
