--- a/src/components/Products.module.css
+++ b/src/components/Products.module.css
@@ -1,11 +1,19 @@
+/* Products.module.css */
+
 :root {
-	--trans: all 1.4s ease 0s;
+  --trans: all 1.4s ease 0s;
   --dark: #2f313a;
   --yellow: #ffdd40;
   --red: #dd2424;
 }
 
 .product {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr); 
+  row-gap: 1rem;
+  column-gap: 1rem;
+  justify-content: center;
+  align-items: center;
   margin: 1rem;
   padding: 1rem;
   background-color: var(--yellow);
@@ -15,6 +23,8 @@
   color: white;
   list-style: none;
   transform: scale(0.95);
+  height: 500px; 
+  width: 300px;
 }
 
 .product:hover {
@@ -23,34 +33,43 @@
   filter: drop-shadow(0px 20px 10px #0008);
 }
 
-.product h2 {
-  font-size: 3rem;
-  color: var(--dark);
-}
-
-.product h3 {
-  color: var(--dark);
-  margin: 0;
-  font-size: 1rem;
-}
-
-.product p {
-  color: var(--red);
-  font-size: 2rem;
+.thumbnailContainer {
+  width: 140px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 0.25em;
+  background: var(--dark);
+  margin-bottom: 10px;
+  margin-left: 4rem;
 }
 
 .product .thumbnail {
-  border-radius: 0.25em;
   filter: grayscale(1);
-  background: var(--dark);
-  width: 220px;
-  height: 220px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border: 1px solid #ddd;
-  margin-bottom: 10px;
 }
 
 .product:hover .thumbnail {
   filter: none;
   transition: var(--trans);
+}
+
+.title {
+  font-size: 1.5rem;
+  color: var(--dark);
+  overflow-wrap: break-word;
+}
+
+.description {
+  color: var(--dark);
+  margin: 0;
+  font-size: 1rem;
+  overflow-wrap: break-word;
+}
+
+.price {
+  color: var(--red);
+  font-size: 1.5rem;
 }
